# celestra

./: .gitignore  LICENSE  README.md  autocomplete_test.py  demo_rbac.py  example_advanced_application.py  example_enterprise_validation.py  example_multiple_ports_showcase.py  k8s-dsl-spec.md  mkdocs.yml  pyproject.toml  run_tests.py  test.py  test_complete_k8s_gen.py  test_k8s_gen.py  test_kubernetes_ports_generation.py  test_multiple_ports.py  test_phase_9.py  test_phases_2_3.py  test_phases_5_6.py  test_phases_7_8.py  test_rbac_implementation.py  test_results.json
.github/workflows/: deploy-docs.yml  publish-pypi.yml
docs/: index.md
docs/advanced/: index.md
docs/api-reference/: index.md
docs/components/: index.md  output-execution.md
docs/components/advanced/: advanced-features.md  cost-optimization.md  custom-resource.md  dependency-manager.md  deployment-strategy.md  external-services.md  observability.md  plugin-system.md  wait-condition.md
docs/components/core/: app-group.md  app.md  stateful-app.md
docs/components/networking/: companion.md  health.md  ingress.md  network-policy.md  scaling.md  service.md
docs/components/security/: rbac.md  role.md  secrets.md  security-policy.md  service-account.md
docs/components/storage/: config-map.md  volume.md
docs/components/workloads/: cron-job.md  deployment.md  job.md
docs/configuration/: index.md
docs/examples/: index.md
docs/examples/complex/: index.md
docs/examples/configs/: index.md
docs/examples/messaging/: kafka.md
docs/examples/production/: index.md
docs/examples/simple/: hello-world.md  nginx-app.md  nodejs-app.md
docs/getting-started/: core-concepts.md  first-app.md  index.md  installation.md  quick-start.md
docs/javascripts/: copy-code.js  mathjax.js
docs/stylesheets/: extra.css
docs/tutorials/: basic-web-app.md  index.md  kafka-deployment.md  microservices.md  multi-environment.md  observability-stack.md  rbac-security.md  wordpress-platform.md
specs/: README.md  advanced-features.md  api-reference.md  cli.md  extensions.md  implementation.md  index.md  output-examples.md
specs/celestra/: README.md  api-reference.md  implementation.md  index.md
specs/celestra-ui/: code-generation.md  component-library.md  implementation-roadmap.md  integration.md  user-experience.md  visual-builder.md  workflow-engine.md
src/: requirements.txt  test_results.json
src/celestra/: __init__.py  py.typed
src/celestra/advanced/: cost_optimization.py  custom_resource.py  dependency_manager.py  deployment_strategy.py  external_services.py  observability.py  wait_condition.py
src/celestra/core/: __init__.py  app.py  app_group.py  base_builder.py  resource_generator.py  stateful_app.py
src/celestra/networking/: __init__.py  companion.py  health.py  ingress.py  network_policy.py  scaling.py  service.py
src/celestra/output/: __init__.py  base_output.py  docker_compose_output.py  helm_output.py  kubernetes_output.py  kustomize_output.py  terraform_output.py
src/celestra/plugins/: __init__.py  plugin_base.py  plugin_manager.py  template_manager.py
src/celestra/security/: __init__.py  rbac.py  secret.py  security_policy.py
src/celestra/serialization/: __init__.py
src/celestra/storage/: __init__.py  config_map.py
src/celestra/utils/: __init__.py  decorators.py  helpers.py
src/celestra/validation/: __init__.py  cost_estimator.py  security_scanner.py  validator.py
src/celestra/workloads/: __init__.py  cron_job.py  job.py  lifecycle.py
src/examples/: README.md  __init__.py  advanced_application_demo.py  complete_platform_demo.py  enterprise_validation_demo.py  hello_world_docker_demo.py  kubernetes_yaml_generation_example.py  multiple_ports_showcase.py  rbac_security_demo.py  simple_hello_demo.py
src/k8s_gen/: __init__.py
src/k8s_gen/advanced/: cost_optimization.py  custom_resource.py  dependency_manager.py  deployment_strategy.py  external_services.py  observability.py  wait_condition.py
src/k8s_gen/core/: __init__.py  app.py  app_group.py  (+3 more)
src/test/: README.md  __init__.py  test_advanced_features.py  test_core_components.py  test_examples.py  test_execution.py  test_execution_methods.py  test_integration.py  test_networking.py  test_observability.py  test_output_formats.py  test_plugins.py  test_run_all.py  test_security.py  test_serialization.py  test_validation.py  test_workloads.py  utils.py
wasm-test/: README.md  index.html  main.py  pyscript.json
(+28 files in other folders)
